--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -30,16 +30,16 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
+        <com.example.gqsystem.view.CircleImageView
             android:id="@+id/iv_logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dimen_64"
+            android:layout_height="@dimen/dimen_64"
             android:layout_marginTop="@dimen/dp_64"
             android:src="@mipmap/ic_launcher"
+            app:userHeader="@{viewModel.userBean.userInfo.sex}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
-
 
         <TextView
             android:id="@+id/tv_1"
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dp_8"
             android:layout_marginTop="@dimen/dp_24"
-            android:text="@{viewModel.userName}"
+            android:text="@{viewModel.userBean.userInfo.realname}"
             app:layout_constraintLeft_toRightOf="@+id/tv_1"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_logo"
@@ -131,8 +131,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="@dimen/dp_80"
-                android:layout_marginRight="@dimen/dp_80"
-                android:onClick="@{()->viewModel.usePwdVerification()}">
+                android:layout_marginRight="@dimen/dp_80">
 
                 <LinearLayout
                     android:layout_width="match_parent"
