--- a/app/src/main/res/layout/company_fragment_content.xml
+++ b/app/src/main/res/layout/company_fragment_content.xml
@@ -18,7 +18,7 @@
             type="com.example.gqsystem.ui.company.content.CompanyContentFragment.EventListener" />
     </data>
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -458,6 +458,7 @@
                         android:layout_height="wrap_content"
                         android:drawableEnd="@mipmap/ic_chevron_right"
                         android:padding="@dimen/dimen_16"
+                        android:onClick="@{()->clickListener.btnRelated()}"
                         android:text="关联企业"
                         android:textColor="@color/text_black_87" />
 
@@ -479,5 +480,5 @@
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 </layout>
