--- a/app/src/main/res/layout/activity_lock.xml
+++ b/app/src/main/res/layout/activity_lock.xml
@@ -36,10 +36,10 @@
             android:layout_height="@dimen/dimen_64"
             android:layout_marginTop="@dimen/dp_64"
             android:src="@mipmap/ic_launcher"
-            app:userHeader="@{viewModel.userBean.userInfo.sex}"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:userHeader="@{viewModel.userBean.userInfo.sex}" />
 
         <TextView
             android:id="@+id/tv_1"
@@ -130,8 +130,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/dp_80"
-                android:layout_marginRight="@dimen/dp_80">
+                android:layout_marginLeft="@dimen/dimen_64"
+                android:layout_marginRight="@dimen/dimen_64">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -157,6 +157,8 @@
                         android:layout_marginRight="@dimen/dp_16"
                         android:background="@drawable/edit_text_bg"
                         android:inputType="textPassword"
+                        android:paddingStart="@dimen/dimen_4"
+                        android:text="@={viewModel.userPwd}"
                         android:textSize="@dimen/text_14" />
 
 
