--- a/app/src/main/res/layout/home_page_fragment.xml
+++ b/app/src/main/res/layout/home_page_fragment.xml
@@ -50,8 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="@dimen/fab_margin"
-            android:layout_marginBottom="@dimen/dp_16"
-            app:layout_behavior="com.example.myapplication.behavior.FloatingActionButtonBehavior"
+            android:layout_marginBottom="@dimen/dimen_64"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:srcCompat="@mipmap/ic_view_grid" />
