--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -7,4 +7,13 @@
         <item>青啤济南公司</item>
         <item>雪花集团</item>
     </string-array>
+
+
+    <string-array name="time_out">
+        <item>1分钟</item>
+        <item>2分钟</item>
+        <item>3分钟</item>
+        <item>5分钟</item>
+        <item>10分钟</item>
+    </string-array>
 </resources>
